# bitsharp-dbus

./: ChangeLog  Makefile.am  Makefile.include  autogen.sh  configure.ac  monotorrent-dbus.mds
Sample/: AssemblyInfo.cs  ChangeLog  ClientMode.cs  Engine.cs  Main.cs  Sample.mdp  ServerMode.cs
monotorrent-dbus/: AssemblyInfo.cs  ChangeLog  DBus-API-Layout.txt  MainClass.cs  Makefile.am  ObjectPathComparer.cs  monotorrent-dbus.mdp  monotorrent-dbus.pc.in
monotorrent-dbus-server/: AssemblyInfo.cs  ChangeLog  Main.cs  Makefile.am  TorrentData.cs  TorrentService.cs  monotorrent-dbus-server.in  monotorrent-dbus-server.mdp
monotorrent-dbus-server/Implementation/: EngineAdapter.cs  PeerAdapter.cs  TorrentAdapter.cs  TorrentManagerAdapter.cs  TrackerAdapter.cs
monotorrent-dbus/EnumAdapters/: EncryptionTypes.cs  EnumAdapter.cs  Priority.cs  TorrentState.cs
monotorrent-dbus/Implementation/: EngineAdapter.cs  EngineSettingsAdapter.cs  PeerAdapter.cs  TorrentAdapter.cs  TorrentFileAdapter.cs  TorrentManagerAdapter.cs  TorrentService.cs  TorrentSettingsAdapter.cs  TrackerAdapter.cs
monotorrent-dbus/Interfaces/: IDownloader.cs  IEngine.cs  IEngineSettings.cs  IExportable.cs  IPeer.cs  ITorrent.cs  ITorrentFile.cs  ITorrentService.cs  ITorrentSettings.cs  ITracker.cs
monotorrent-dbus/data/: org.monotorrent.dbus.service.in
